versions/1.21/translated/ru_ru/develop/getting-started/project-structure.md
---
title: Структура проекта
description: Обзор структуры проекта Fabric мода.
authors:
  - IMB11

search: false
---

# Структура проекта {#project-structure}

На этой странице будет рассмотрена структура проекта Fabric мода, и назначение каждого файла и папки в проекте.

## `fabric.mod.json` {#fabric-mod-json}

Файл `fabric.mod.json` - это главный файл который описывает ваш мод загрузчику Fabric. Он содержит такую информацию как идентификатор мода, версию и зависимости.

Важнейшие поля в файле `fabric.mod.json`:

- `id`: Идентификатор мода (должен быть уникальным).
- `name`: Название мода.
- `environment`: Среда выполнения которую запускает ваш мод, например `client`, `server`, или `*` для обоих.
- `entrypoints`: Точки входа вашего мода, например `main` или `client`.
- `depends`: Зависимости вашего мода.
- `mixins`: Миксины, которые предоставляет ваш мод.

Ниже вы можете увидеть пример файла `fabric.mod.json`, этот файл `fabric.mod.json` для примерного проекта, лежащего в основе этого сайта документации.

:::details Примерный проект `fabric.mod.json`
@[code lang=json](@/reference/1.21/src/main/resources/fabric.mod.json)
:::

## Точки входа {#entrypoints}

Как упоминалось ранее, файл `fabric.mod.json` имеет внутри поле `entrypoint`, это поле используется для указания точек входа, которые предоставляет ваш мод.

Создатель шаблонов создает обе точки входа `main` и `client` по умолчанию, точка входа `main` используется для общего кода, а точка входа `client` используется для клиентоориентированного кода. Эти точки входа вызывается, когда игра запускается.

@[code lang=java transcludeWith=#entrypoint](@/reference/1.21/src/main/java/com/example/docs/FabricDocsReference.java)

Выше приведён пример простой точки входа `main`, который записывает сообщение в консоль, когда игра запускается.

## `src/main/resources` {#src-main-resources}

Папка `src/main/resources` используется для хранения ресурсов которые использует ваш мод, например текстуры, модели, и звуки.

Это так же папка хранения `fabric.mod.json` и все файлы конфигурации, которые использует ваш мод.

Ресурсы хранятся в структуре, которые отражают структуру пакетов ресурсов, например, текстуре блока будет храниться в `assets/modid/textures/block/block.png`.

## `src/client/resources` {#src-client-resources}

Папка `src/client/resources` используется для хранения клиентоориентированных ресурсов.

## `src/main/java` {#src-main-java}

Папка `src/main/java` используется для хранения исходного кода вашего мода, она существует на клиентской так и на серверной среде.

## `src/client/java` {#src-client-java}

Папка `src/client/java` используется для хранения клиентоориентированного исходного кода, например код рендеринга или логика на стороне клиента - например предоставляемый цвет блока.
